--- a/contracts/proposal-nft-voting-factory/Cargo.toml
+++ b/contracts/proposal-nft-voting-factory/Cargo.toml
@@ -14,10 +14,9 @@ backtraces = ["cosmwasm-std/backtraces"]
 library = []
 
 [dependencies]
-cosmwasm-std = { version = "1.0.0-beta" }
-cosmwasm-storage = { version = "1.0.0-beta" }
-cw-storage-plus = "0.10"
-cw2 = "0.10"
+cosmwasm-std = { version = "0.16.2" }
+cosmwasm-storage = { version = "0.16.2" }
+cw-storage-plus = { version = "0.9.1" }
 protobuf = { version = "2", features = ["with-bytes"] }
 schemars = "0.8.3"
 serde = { version = "1.0.127", default-features = false, features = ["derive"] }
@@ -25,4 +24,4 @@ thiserror = { version = "1.0.26" }
 galacticdao-nft-voting-protocol = { version = "0.1.0", path = "../../packages/nft-voting-protocol" }
 
 [dev-dependencies]
-cosmwasm-schema = { version = "1.0.0-beta" }
+cosmwasm-schema = { version = "0.16.2" }
