--- a/contracts/proposal-nft-voting/Cargo.toml
+++ b/contracts/proposal-nft-voting/Cargo.toml
@@ -14,10 +14,9 @@ backtraces = ["cosmwasm-std/backtraces"]
 library = []
 
 [dependencies]
-cosmwasm-std = { version = "1.0.0-beta" }
-cosmwasm-storage = { version = "1.0.0-beta" }
-cw-storage-plus = "0.10"
-cw2 = "0.10"
+cosmwasm-std = { version = "0.16.2" }
+cosmwasm-storage = { version = "0.16.2" }
+cw-storage-plus = { version = "0.9.1" }
 schemars = "0.8.3"
 serde = { version = "1.0.127", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.26" }
