--- a/node-scripts/package.json
+++ b/node-scripts/package.json
@@ -6,7 +6,9 @@
     "node": "16.x"
   },
   "scripts": {
-    "upload-contract": "ts-node src/common/uploadContractToChain.ts"
+    "upload-contract": "ts-node src/common/uploadContractToChain.ts",
+    "integration-test/full": "ts-node src/proposal/integrationTests/main.ts",
+    "integration-test/playground": "ts-node src/proposal/integrationTests/playground.ts"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +16,8 @@
     "@terra-money/terra.js": "^3.0.0",
     "dotenv": "^10.0.0",
     "lodash": "^4.17.21",
+    "loglevel": "^1.8.0",
+    "loglevel-plugin-prefix": "^0.8.4",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.2"
   },
