--- a/contracts/proposal/proposal-nft-voting-factory/Cargo.toml
+++ b/contracts/proposal/proposal-nft-voting-factory/Cargo.toml
@@ -21,7 +21,7 @@ protobuf = { version = "2", features = ["with-bytes"] }
 schemars = "0.8.3"
 serde = { version = "1.0.127", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.26" }
-galacticdao-nft-voting-protocol = { version = "0.1.0", path = "../../packages/nft-voting-protocol" }
+galacticdao-nft-voting-protocol = { version = "0.1.0", path = "../../../packages/nft-voting-protocol" }
 
 [dev-dependencies]
 cosmwasm-schema = { version = "0.16.2" }
