--- a/contracts/staking/nft-staking/Cargo.toml
+++ b/contracts/staking/nft-staking/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "galacticdao-nft-voting-protocol"
+name = "galacticdao-nft-staking"
 version = "0.1.0"
 authors = ["Frank Jia <jiafrank98@gmail.com>"]
 edition = "2018"
@@ -17,10 +17,11 @@ library = []
 cosmwasm-std = { version = "0.16.2" }
 cosmwasm-storage = { version = "0.16.2" }
 cw-storage-plus = { version = "0.9.1" }
-cw721 = "0.9.2"
+protobuf = { version = "2", features = ["with-bytes"] }
 schemars = "0.8.3"
 serde = { version = "1.0.127", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.26" }
+galacticdao-nft-staking-protocol = { version = "0.1.0", path = "../../../packages/nft-staking-protocol" }
 
 [dev-dependencies]
 cosmwasm-schema = { version = "0.16.2" }
