--- a/packages/nft-staking-protocol/Cargo.toml
+++ b/packages/nft-staking-protocol/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "galacticdao-proposal-nft-voting"
+name = "galacticdao-nft-staking-protocol"
 version = "0.1.0"
 authors = ["Frank Jia <jiafrank98@gmail.com>"]
 edition = "2018"
@@ -17,10 +17,11 @@ library = []
 cosmwasm-std = { version = "0.16.2" }
 cosmwasm-storage = { version = "0.16.2" }
 cw-storage-plus = { version = "0.9.1" }
+cw721 = "0.9.2"
+cw20 = "0.9.1"
 schemars = "0.8.3"
 serde = { version = "1.0.127", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.26" }
-galacticdao-nft-voting-protocol = { version = "0.1.0", path = "../../packages/nft-voting-protocol" }
 
 [dev-dependencies]
-cosmwasm-schema = { version = "1.0.0-beta" }
+cosmwasm-schema = { version = "0.16.2" }
