--- a/node-scripts/package.json
+++ b/node-scripts/package.json
@@ -7,13 +7,12 @@
   },
   "scripts": {
     "upload-contract": "ts-node src/common/uploadContractToChain.ts",
-    "integration-test/full": "ts-node src/proposal/integrationTests/main.ts",
-    "integration-test/playground": "ts-node src/proposal/integrationTests/playground.ts"
+    "proposal/integration-test/full": "ts-node src/proposal/integrationTests/main.ts",
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@terra-money/terra.js": "^3.0.0",
+    "@terra-money/terra.js": "^3.0.3",
     "dotenv": "^10.0.0",
     "lodash": "^4.17.21",
     "loglevel": "^1.8.0",
