--- a/node-scripts/package.json
+++ b/node-scripts/package.json
@@ -8,7 +8,9 @@
   "scripts": {
     "upload-contract": "ts-node src/common/scripts/uploadContractToChain.ts",
     "nft/query": "ts-node src/nft/scripts/queryNft.ts",
-    "proposal/integration-test/full": "ts-node src/proposal/integrationTests/main.ts",
+    "proposal/instantiate": "ts-node src/proposal/scripts/proposal/instantiateProposalContract.ts",
+    "proposal/revoke": "ts-node src/proposal/scripts/proposal/revokeProposal.ts",
+    "proposal/vote": "ts-node src/proposal/scripts/proposal/voteOnProposal.ts",
     "staking/playground": "ts-node src/staking/scripts/playground.ts",
     "staking/instantiate": "ts-node src/staking/scripts/instantiateStakingContract.ts",
     "staking/changeConfig": "ts-node src/staking/scripts/changeConfig.ts",
