--- a/packages/nft-voting-protocol/Cargo.toml
+++ b/packages/nft-voting-protocol/Cargo.toml
@@ -19,6 +19,7 @@ cosmwasm-storage = { version = "0.16.5" }
 cw-storage-plus = { version = "0.9.1" }
 cw20 = "0.9.1"
 cw721 = "0.9.2"
+galacticdao-nft-staking-protocol = { version = "0.1.0", path = "../nft-staking-protocol" }
 schemars = "0.8.3"
 serde = { version = "1.0.127", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.26" }
